--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>ard</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
         <link rel="stylesheet" href="amiya.css">
-        <script src="create.js"></script>
+        <script src="amiya.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164321636-2"></script>
@@ -21,7 +21,7 @@
     </head>
     <body>
         <div class="ard">
-           <li href="index.html">Draw here</li>
+           <li><a href="index.html">Draw here</a></li>
              
         <li onclick="myFunction()">Change Background</li>
          <li onClick="download()"> <a id="download" download="art.jpg">Download</a></li>
