--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>ard</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+        <script src="p5.js""></script>
         <link rel="stylesheet" href="amiya.css">
         <script src="amiya.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
